# wasm-fern

./: Cargo.toml  README.md
app/: index.html  index.js  package.json  style.css  wasm_fern.d.ts  wasm_fern.js  wasm_fern_bg.js  wasm_fern_bg.wasm  wasm_fern_bg.wasm.d.ts
src/: lib.rs
