[package]
name = "wasm_fern"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"
web-sys = "0.3"

[lib]
crate-type = ["cdylib"]

[target.'cfg(target_arch = "wasm32")']
rustflags = ["-C", "link-arg=--import-table"]
